// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generator snapshots > renders markdown output with provenance snapshot 1`] = `
"---
title: SpecKit Demo
release: 2024.09
speckit_provenance:
  tool: speckit
  tool_version: 0.1.0
  tool_commit: abc1234
  mode: classic
  experimental: false
  frameworks: []
  dialect:
    id: speckit.v1
    version: 1.1.0
  template:
    id: test-bundle
    version: 0.0.1
    sha: test-bundle-sha
  spec:
    version: '2024.09'
    digest: 'sha256:mock-spec-digest'
  generated_at: '2024-01-02T03:04:05.000Z'
---

# SpecKit Demo overview

Welcome to version 2024.09 of SpecKit Demo.

## Requirements
- REQ-001 — Render overview
- REQ-002 — Preserve placeholders



Status token: {{RELEASE_STATUS}}
"
`;

exports[`generator snapshots > renders typescript metadata with provenance comment 1`] = `
"/* Generated by Speckit 0.1.0 (abc1234) using template test-bundle@test-bundle-sha for spec 2024.09 (sha256:mock-spec-digest) dialect speckit.v1@1.1.0. */
export const metadata = {
  name: "SpecKit Demo",
  version: "2024.09",
  requirements: 2,
};
"
`;

exports[`generator snapshots > renders yaml output with language appropriate header 1`] = `
"# Generated by Speckit 0.1.0 (abc1234) using template test-bundle@test-bundle-sha for spec 2024.09 (sha256:mock-spec-digest) dialect speckit.v1@1.1.0.
name: speckit-demo-config
version: 2024.09
dialect: speckit.v1@1.1.0
requirements:
- id: REQ-001
    title: Render overview
- id: REQ-002
    title: Preserve placeholders

"
`;

exports[`mode generator snapshots > renders 'classic' mode snapshot 1`] = `
"---
title: Mode Classic
mode: Classic
speckit_provenance:
  tool: speckit
  tool_version: 0.1.0
  tool_commit: abc1234
  mode: classic
  experimental: false
  frameworks: []
  dialect:
    id: speckit.v1
    version: 1.1.0
  template:
    id: mode-classic
    version: 0.0.1
    sha: mode-classic-sha
  spec:
    version: '2024.09'
    digest: 'sha256:mock-spec-digest'
  generated_at: '2024-01-02T03:04:05.000Z'
---

# Classic mode snapshot

This output guards Classic defaults. Version 2024.09.
"
`;

exports[`mode generator snapshots > renders 'secure' mode snapshot 1`] = `
"---
title: Mode Secure
mode: Secure
speckit_provenance:
  tool: speckit
  tool_version: 0.1.0
  tool_commit: abc1234
  mode: classic
  experimental: false
  frameworks: []
  dialect:
    id: speckit.v1
    version: 1.1.0
  template:
    id: mode-secure
    version: 0.0.1
    sha: mode-secure-sha
  spec:
    version: '2024.09'
    digest: 'sha256:mock-spec-digest'
  generated_at: '2024-01-02T03:04:05.000Z'
---

# Secure mode snapshot

This output guards Secure defaults. Version 2024.09.
"
`;
